bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:6: error: not found: value b
    b=false
    ^