bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  var a:Boolean=false
  if(Math.abs(n-100)<=10 && Math.abs(n-100)>=0){
    a=true
  }else{
    b=false
  }
  if(Math.abs(n-200)<=10 && Math.abs(n-200)>=0 && a==true){
    return true
  }else{
    return false
  }
}